[package]
name = "rustshambo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.10"
serde = { version = "1.0.136", features = ["derive"] }
rocket_cors = "0.5.2"

[dependencies.rocket_contrib]
version = "0.4.10"
default-features = false
features = ["json"]
