[package]
name = "rustshambo"
version = "0.1.0"
edition = "2021"

[dependencies]
rocket = {version = "0.5.0-rc.3", features = ["json"]}
serde = { version = "1.0.136", features = ["derive"] }
rocket_cors = { git = "https://github.com/lawliet89/rocket_cors", branch = "master" }
chrono = "0.4"
rust-embed="6.6"
